third_party/move/move-compiler-v2/tests/lambda/storable/generic_func.exp

Diagnostics:
error: unsupported language construct
   ┌─ tests/lambda/storable/generic_func.move:36:18
   │
36 │         let f1 = move |addr| 0x42::mod2::item_exists<MyStruct1>(addr) with store+copy;
   │                  ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/generic_func.move:36:71
   │
36 │         let f1 = move |addr| 0x42::mod2::item_exists<MyStruct1>(addr) with store+copy;
   │                                                                       ^^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Abilities on function expressions

error: unsupported language construct
   ┌─ tests/lambda/storable/generic_func.move:37:18
   │
37 │         let f2 = move |addr| 0x42::mod2::item_exists<MyStruct2>(addr) with store+copy;
   │                  ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/generic_func.move:37:71
   │
37 │         let f2 = move |addr| 0x42::mod2::item_exists<MyStruct2>(addr) with store+copy;
   │                                                                       ^^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Abilities on function expressions

error: unsupported language construct
   ┌─ tests/lambda/storable/generic_func.move:53:55
   │
53 │         assert!(0x42::mod2::item_exists<|address|bool with store+copy>(addr));
   │                                                       ^^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
   ┌─ tests/lambda/storable/generic_func.move:55:58
   │
55 │         let found_f = 0x42::mod2::get_item<|address|bool with store+copy>(addr);
   │                                                          ^^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types
